Bug 109743 - Test fails: piglit.spec.arb_sample_shading.arb_sample_shading-builtin-gl-sample-mask-mrt-alpha
Summary: Test fails: piglit.spec.arb_sample_shading.arb_sample_shading-builtin-gl-samp...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-22 11:59 UTC by Andrii K
Modified: 2019-03-26 10:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Andrii K 2019-02-22 11:59:19 UTC
Test output:

Probe color at (0,0)
  Expected: 255 0 255 0
  Observed: 0 0 0 0
  Attachment: 1
PIGLIT: {"result": "fail" }
Comment 1 Andrii K 2019-02-22 12:01:41 UTC
Merge request: https://gitlab.freedesktop.org/mesa/mesa/merge_requests/292
Comment 2 Sergii Romantsov 2019-03-26 09:01:10 UTC
Should be fixed with

commit e0db0c74b96b8a843e9260749ebbbcbacbabd139
Author: Danylo Piliaiev <danylo.piliaiev@globallogic.com>
Date:   Wed Feb 27 17:10:42 2019 +0200

    intel/fs: Make alpha test work with MRT and sample mask

commit c8abe03f3b65505d2c1c165d88efb3bb62e06db1
Author: Danylo Piliaiev <danylo.piliaiev@globallogic.com>
Date:   Wed Feb 20 19:39:18 2019 +0200

    i965,iris,anv: Make alpha to coverage work with sample mask
Comment 3 Andrii K 2019-03-26 10:26:26 UTC
Test fails with system Mesa - version 18.2.8 and passes successfully with master (e16ac33f) version. 

Clayton, maybe test should be added to CI?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.